--- a/client/src/app/modules/miscellaneous/components/forms/autocomplete-insertion-employee/autocomplete-insertion-employee.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/autocomplete-insertion-employee/autocomplete-insertion-employee.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="full-width" [formGroup]="form!">
-  <mat-label>Insertion</mat-label>
+  <mat-label>Publiciste</mat-label>
   <input type="text" matInput [formControlName]="propertyName" [matAutocomplete]="matAutocomplete" [(ngModel)]="model">
   <mat-icon matSuffix (click)="model=undefined" *ngIf="!isDisabled && model!=undefined">
     close
