--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -41,13 +41,13 @@
           (element.formalisteEmployee!=undefined?element.formalisteEmployee.lastname:"")}}
       </ng-container>
       <ng-container matColumnDef="insertionEmployee">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Insertion</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Publiciste</th>
         <td mat-cell *matCellDef="let element">
           {{(element.insertionEmployee!=undefined?element.insertionEmployee.firstname:"") + " " +
           (element.insertionEmployee!=undefined?element.insertionEmployee.lastname:"")}}</td>
       </ng-container>
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Insertion</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
         <td mat-cell *matCellDef="let element">
           <mat-icon *ngIf="element.id==null && editMode" color="accent" (click)="deleteResponsable(element)">delete
           </mat-icon>
@@ -182,10 +182,13 @@
                     <autocomplete-country [(model)]="selectedResponsable.country" [form]="principalForm"
                       propertyName="country" [isMandatory]="true"></autocomplete-country>
                   </td>
-                  <generic-input [(model)]="selectedResponsable.building" label="Bâtiment" [form]="principalForm"
-                    propertyName="building" [maxLength]="20"></generic-input>
-                  <generic-input [(model)]="selectedResponsable.floor" label="Etége" [form]="principalForm"
-                    propertyName="floor" [maxLength]="8"></generic-input>
+                  <td>
+                    <generic-input [(model)]="selectedResponsable.building" label="Bâtiment" [form]="principalForm"
+                      propertyName="building" [maxLength]="20"></generic-input>
+                  </td>
+                  <td>
+                    <generic-input [(model)]="selectedResponsable.floor" label="Etage" [form]="principalForm"
+                      propertyName="floor" [maxLength]="8"></generic-input>
                 </tr>
               </table>
               <table class="full-width">
@@ -194,10 +197,10 @@
                     *ngIf="selectedResponsable.jssSubscription!=undefined && selectedResponsable.jssSubscription!=null">
                     <h4>Abonnement JSS</h4>
                     <mat-checkbox formControlName="jssSubscription1" class="checkbox-margin"
-                      [(ngModel)]="selectedResponsable.jssSubscription.isWebSubscription">Web
+                      [(ngModel)]="selectedResponsable.jssSubscription.isWebSubscription">Numérique
                     </mat-checkbox>
                     <mat-checkbox formControlName="jssSubscription2" class="checkbox-margin"
-                      [(ngModel)]="selectedResponsable.jssSubscription.isPaperSubscription">Papier/Web
+                      [(ngModel)]="selectedResponsable.jssSubscription.isPaperSubscription">Papier/Numérique
                     </mat-checkbox>
                   </td>
                   <td
