--- a/client/src/app/modules/quotation/components/affaire/affaire.component.html
+++ b/client/src/app/modules/quotation/components/affaire/affaire.component.html
@@ -7,127 +7,121 @@
             <autocomplete-affaire [(model)]="selectedAffaire" [form]="affaireForm" propertyName="affaire"
               (onOptionSelected)="fillAffaire($event)"></autocomplete-affaire>
           </td>
-        </tr>
-      </table>
-      <table class="full-width">
-        <tr>
-          <td>
-            <generic-toggle [(model)]="affaire.isIndividual" label="Particulier ?" [form]="affaireForm"
-              propertyName="isIndividual"></generic-toggle>
-          </td>
-          <td *ngIf="affaire.isIndividual==true">
-            <radio-group-civility [(model)]="affaire.civility" [form]="affaireForm" propertyName="civility"
-              label="Civilité"></radio-group-civility>
-          </td>
-          <td *ngIf="affaire.isIndividual==true">
-            <generic-input [(model)]="affaire.lastname" label="Nom" [form]="affaireForm" propertyName="lastname"
-              [isMandatory]="true" [conditionnalRequired]="affaire.isIndividual" [maxLength]="20"></generic-input>
-          </td>
-          <td *ngIf="affaire.isIndividual==true">
-            <generic-input [(model)]="affaire.firstname" label="Prénom" [form]="affaireForm" propertyName="firstname"
-              [isMandatory]="true" [conditionnalRequired]="affaire.isIndividual" [maxLength]="20"></generic-input>
-          </td>
-        </tr>
-      </table>
-      <table class="full-width" *ngIf="affaire.isIndividual==false">
-        <tr>
-          <td>
-            <autocomplete-legal-form [(model)]="affaire.legalForm" [form]="affaireForm" propertyName="legalForm"
-              [isMandatory]="true" [isDisabled]="!editMode" [conditionnalRequired]="!affaire.isIndividual">
-            </autocomplete-legal-form>
-          </td>
-          <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
-            <autocomplete-siren [(model)]="affaire.siren" [form]="affaireForm" propertyName="siren" [isMandatory]="true"
-              [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE"
-              [customValidators]="[checkSiren('siren')]" (onOptionSelected)="fillSiren($event)"></autocomplete-siren>
-          </td>
-          <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
-            <autocomplete-siret [(model)]="affaire.siret" [form]="affaireForm" propertyName="siret" [isMandatory]="true"
-              [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE"
-              [customValidators]="[checkSiret('siret')]" (onOptionSelected)="fillSiret($event)"></autocomplete-siret>
-          </td>
-          <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
-            <autocomplete-rna [(model)]="affaire.rna" [form]="affaireForm" propertyName="rna" [isMandatory]="true"
-              [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE"
-              [customValidators]="[checkRna('rna')]" (onOptionSelected)="fillRna($event)"></autocomplete-rna>
-          </td>
-        </tr>
-      </table>
-      <table class="full-width">
-        <tr>
-          <td>
-            <generic-input [(model)]="affaire.denomination" label="Dénomination" [form]="affaireForm"
-              propertyName="denomination" [isMandatory]="true" [isDisabled]="!editMode"
-              [conditionnalRequired]="!this.affaire.isIndividual" [maxLength]="60"></generic-input>
-          </td>
-        </tr>
-      </table>
-      <table class="full-width">
-        <tr>
-          <td>
-            <generic-input [(model)]="affaire.address" label="Adresse" [form]="affaireForm" propertyName="address"
-              [isMandatory]="true" [isDisabled]="!editMode" [conditionnalRequired]="!this.affaire.isIndividual"
-              [maxLength]="20"></generic-input>
-          </td>
-          <td>
-            <autocomplete-city [(model)]="affaire.city" [modelCountry]="affaire.country" [form]="affaireForm"
-              propertyName="city" [isMandatory]="true" [conditionnalRequired]="!affaire.isIndividual"
-              (onOptionSelected)="fillPostalCode($event)"></autocomplete-city>
-          </td>
-          <td>
-            <autocomplete-postal-code [(model)]="affaire.postalCode" [form]="affaireForm" propertyName="postalCode"
-              [isMandatory]="true" [conditionnalRequired]="!affaire.isIndividual" (onOptionSelected)="fillCity($event)">
-            </autocomplete-postal-code>
-          </td>
-          <td>
-            <autocomplete-country [(model)]="affaire.country" [form]="affaireForm" propertyName="country"
-              [isMandatory]="true" [isDisabled]="!affaire.isIndividual"></autocomplete-country>
-          </td>
-        </tr>
-      </table>
-      <table class="full-width">
-        <tr>
-          <td>
-            <chips-mail [(model)]="affaire.mails" label="Mails de facturation" [form]="affaireForm" propertyName="mails"
-              [isDisabled]="!editMode"></chips-mail>
-          </td>
-          <td>
-            <chips-phone [(model)]="affaire.phones" label="Téléphones" [form]="affaireForm" propertyName="phones"
-              [isDisabled]="!editMode"></chips-phone>
-          </td>
-          <td>
-            <generic-input [(model)]="affaire.externalReference" label="Référence externe" [form]="affaireForm"
-              propertyName="externalReference" [isDisabled]="!editMode" [maxLength]="60"></generic-input>
-          </td>
-          <td>
-            <generic-input [(model)]="affaire.shareCapital" label="Capital social" [form]="affaireForm"
-              propertyName="shareCapital" [isDisabled]="!editMode" type="number"></generic-input>
-          </td>
-        </tr>
-      </table>
-      <table class="full-width">
-        <tr>
-          <td>
-            <generic-textarea [(model)]="affaire.observations" label="Observations" [form]="affaireForm"
-              propertyName="observations" [isDisabled]="!editMode" [numberOfLines]="4"></generic-textarea>
-          </td>
-        </tr>
-      </table>
-      <table class="full-width">
-        <tr *ngFor="let provision of affaire.provisions ; let index = index">
-          <td>
-            <provision-item [editMode]="editMode" [provision]="provision" [affaire]="affaire">
-            </provision-item>
-          </td>
-          <td style="vertical-align: top;">
-            <button *ngIf="editMode" (click)="deleteProvision(index)" mat-mini-fab color="warn" class="mini-fab">
-              <mat-icon>remove</mat-icon>
+          <td class="mini-fab-td"> <button *ngIf="editMode" mat-mini-fab color="warn" matTooltip="Ajouter une affaire"
+              class="mini-fab" (click)="openAddOfferDialog()">
+              <mat-icon>add</mat-icon>
             </button>
           </td>
         </tr>
       </table>
-      <button *ngIf="editMode" (click)="createProvision()" mat-raised-button color="accent">Ajouter une
-        prestation</button>
+      <fieldset [disabled]="true" class="fieldset-no-border" *ngIf="affaire.id">
+        <table class="full-width">
+          <tr>
+            <td>
+              <generic-toggle [(model)]="affaire.isIndividual" label="Particulier ?" [form]="affaireForm"
+                propertyName="isIndividual"></generic-toggle>
+            </td>
+            <td *ngIf="affaire.isIndividual==true">
+              <radio-group-civility [(model)]="affaire.civility" [form]="affaireForm" propertyName="civility"
+                label="Civilité"></radio-group-civility>
+            </td>
+            <td *ngIf="affaire.isIndividual==true">
+              <generic-input [(model)]="affaire.lastname" label="Nom" [form]="affaireForm" propertyName="lastname"
+                [isMandatory]="true" [conditionnalRequired]="affaire.isIndividual" [maxLength]="20"></generic-input>
+            </td>
+            <td *ngIf="affaire.isIndividual==true">
+              <generic-input [(model)]="affaire.firstname" label="Prénom" [form]="affaireForm" propertyName="firstname"
+                [isMandatory]="true" [conditionnalRequired]="affaire.isIndividual" [maxLength]="20"></generic-input>
+            </td>
+          </tr>
+        </table>
+        <table class="full-width" *ngIf="affaire.isIndividual==false">
+          <tr>
+            <td>
+              <autocomplete-legal-form [(model)]="affaire.legalForm" [form]="affaireForm" propertyName="legalForm"
+                [isMandatory]="true" [isDisabled]="true" [conditionnalRequired]="!affaire.isIndividual">
+              </autocomplete-legal-form>
+            </td>
+            <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
+              <autocomplete-siren [(model)]="affaire.siren" [form]="affaireForm" propertyName="siren"
+                [isMandatory]="true"
+                [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
+              </autocomplete-siren>
+            </td>
+            <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
+              <autocomplete-siret [(model)]="affaire.siret" [form]="affaireForm" propertyName="siret"
+                [isMandatory]="true"
+                [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
+              </autocomplete-siret>
+            </td>
+            <td *ngIf="affaire.legalForm != null && affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
+              <autocomplete-rna [(model)]="affaire.rna" [form]="affaireForm" propertyName="rna" [isMandatory]="true"
+                [conditionnalRequired]="!this.affaire.isIndividual && this.affaire.legalForm != null && this.affaire.legalForm.code != UNREGISTERED_COMPANY_LEGAL_FORM_CODE">
+              </autocomplete-rna>
+            </td>
+          </tr>
+        </table>
+        <table class="full-width">
+          <tr>
+            <td>
+              <generic-input [(model)]="affaire.denomination" label="Dénomination" [form]="affaireForm"
+                propertyName="denomination" [isMandatory]="true" [isDisabled]="true"
+                [conditionnalRequired]="!this.affaire.isIndividual" [maxLength]="60"></generic-input>
+            </td>
+          </tr>
+        </table>
+        <table class="full-width">
+          <tr>
+            <td>
+              <generic-input [(model)]="affaire.address" label="Adresse" [form]="affaireForm" propertyName="address"
+                [isMandatory]="true" [isDisabled]="true" [conditionnalRequired]="!this.affaire.isIndividual"
+                [maxLength]="20"></generic-input>
+            </td>
+            <td>
+              <autocomplete-city [(model)]="affaire.city" [modelCountry]="affaire.country" [form]="affaireForm"
+                propertyName="city" [isMandatory]="true" [conditionnalRequired]="!affaire.isIndividual">
+              </autocomplete-city>
+            </td>
+            <td>
+              <autocomplete-postal-code [(model)]="affaire.postalCode" [form]="affaireForm" propertyName="postalCode"
+                [isMandatory]="true" [conditionnalRequired]="!affaire.isIndividual">
+              </autocomplete-postal-code>
+            </td>
+            <td>
+              <autocomplete-country [(model)]="affaire.country" [form]="affaireForm" propertyName="country"
+                [isMandatory]="true" [isDisabled]="true"></autocomplete-country>
+            </td>
+          </tr>
+        </table>
+        <table class="full-width">
+          <tr>
+            <td>
+              <chips-mail [(model)]="affaire.mails" label="Mails de facturation" [form]="affaireForm"
+                propertyName="mails" [isDisabled]="true"></chips-mail>
+            </td>
+            <td>
+              <chips-phone [(model)]="affaire.phones" label="Téléphones" [form]="affaireForm" propertyName="phones"
+                [isDisabled]="true"></chips-phone>
+            </td>
+            <td>
+              <generic-input [(model)]="affaire.externalReference" label="Référence externe" [form]="affaireForm"
+                propertyName="externalReference" [isDisabled]="true" [maxLength]="60"></generic-input>
+            </td>
+            <td>
+              <generic-input [(model)]="affaire.shareCapital" label="Capital social" [form]="affaireForm"
+                propertyName="shareCapital" [isDisabled]="true" type="number"></generic-input>
+            </td>
+          </tr>
+        </table>
+        <table class="full-width">
+          <tr>
+            <td>
+              <generic-textarea [(model)]="affaire.observations" label="Observations" [form]="affaireForm"
+                propertyName="observations" [isDisabled]="true" [numberOfLines]="4"></generic-textarea>
+            </td>
+          </tr>
+        </table>
+      </fieldset>
     </fieldset>
   </div>
 </form>
